Front_End : index.html

--- a/Front_End/view/index.html
+++ b/Front_End/view/index.html
@@ -3,8 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
+
+    <link rel="stylesheet" href="../assets/css/bootstrap-grid.min.css">
+    <link rel="stylesheet" href="../assets/css/styles.css">
+
+    <meta name="viewport" content="width=device-width initial-scale=1">
+
 </head>
-<body>
-    <h1>Hello!, Fucking Life !</h1>
+<body class="min-vh-100 min-vw-100 d-flex justify-content-center align-items-center" style="background: #4d5154">
+
+<main class="w-75 h-75 rounded round-5 shadow-lg" style="background: url(../assets/images/illustration-people-login.png);
+ background-position: top; background-size: cover;" id="home">
+
+    <header class="position-absolute w-75 d-flex justify-content-end me-5">
+        <nav class="navbar navbar-expand-lg bg-transparent">
+
+            <div class="d-flex justify-content-end">
+
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                   <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse d-flex" id="navbarSupportedContent">
+                    <ul class="navbar-nav ml-auto me-3 mb-2 mb-lg-0 fs-5">
+                        <li class="nav-item">
+                            <a class="nav-link active text-primary" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item" id="btnCars">
+                            <a class="nav-link" href="car_page.html">Cars</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+
+
+
+
+
+</main>
 </body>
 </html>
