--- a/Front_End/assets/css/styles.css
+++ b/Front_End/assets/css/styles.css
@@ -1,3 +1,31 @@
 *{
     font-family: 'Poppins',sans-serif;
 }
+
+.background-img {
+    background: url("../images/img.png");
+}
+
+body {
+    height: 100vh;
+}
+
+.image-context {
+    width: 200px;
+    height: 160px;
+}
+
+.bg-color {
+    background: #f8f6ff;
+}
+
+#main-context {
+    background-size: cover !important;
+    background-position: top !important;
+}
+
+.customize-font-color{
+    color: #219EBC;
+}
+
+.rounded{border-radius: 1rem}.nav-pills .nav-link{color: #555}.nav-pills .nav-link.active{color: white}input[type="radio"]{margin-right: 5px}.bold{font-weight:bold}
