--- a/Front_End/view/login_form.html
+++ b/Front_End/view/login_form.html
@@ -2,9 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+    <title>Login</title>
 
+    <link rel="stylesheet" href="../assets/css/bootstrap-grid.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="../assets/css/styles.css">
+
+    <meta name="viewport" content="width=device-width initial-scale=1">
+
+</head>
+<body class="d-flex justify-content-center align-items-center bg-dark">
+
+    <main>
+
+    </main>
 </body>
 </html>
