Front_End : login_form.html

--- a/Front_End/view/login_form.html
+++ b/Front_End/view/login_form.html
@@ -13,7 +13,7 @@
 </head>
 <body class="d-flex justify-content-center align-items-center bg-dark">
 
-    <main>
+    <main class="d-flex justify-content-end align-items-center shadow-lg rounded rounded-5 bg-dark" style="background:url(../assets/images/Login.png); background-size: cover; background-position: center; background-repeat: no-repeat; width: 60vw; height: 80vh">
 
     </main>
 </body>
