--- a/Front_End/view/login_form.html
+++ b/Front_End/view/login_form.html
@@ -4,17 +4,34 @@
     <meta charset="UTF-8">
     <title>Login</title>
 
-    <link rel="stylesheet" href="../assets/css/bootstrap-grid.min.css">
+    <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../assets/css/styles.css">
 
     <meta name="viewport" content="width=device-width initial-scale=1">
 
 </head>
-<body class="d-flex justify-content-center align-items-center bg-dark">
+<body class="d-flex justify-content-center align-items-center bg-dark" style="background: #95a5a6">
 
     <main class="d-flex justify-content-end align-items-center shadow-lg rounded rounded-5 bg-dark" style="background:url(../assets/images/Login.png); background-size: cover; background-position: center; background-repeat: no-repeat; width: 60vw; height: 80vh">
-
+        <form class="shadow d-flex bg-dark text-white flex-column p-5 rounded rounded-5 h-75" id="loginForm" >
+            <h1>Login</h1>
+            <div class="mb-3">
+                <label for="username" class="form-label">Username</label>
+                <input type="email" class="form-control bg-dark text-white" id="username" name="username">
+            </div>
+            <div class="mb-3 mb-3">
+                <label for="password" class="form-label">Password</label>
+                <input type="password" class="form-control bg-dark text-white" id="password" name="password">
+            </div>
+            <button type="button" id="btnLogin" class="btn btn-primary col col-md-5">Login</button>
+        </form>
     </main>
+
+    <script src="../assets/js/bootstrap.bundle.min.js"></script>
+
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+
 </body>
 </html>
