--- a/Front_End/view/customer_register.html
+++ b/Front_End/view/customer_register.html
@@ -2,9 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+    <title>Customer Registration</title>
 
+    <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="../assets/css/styles.css">
+
+    <meta name="viewport" content="width=device-width initial-scale=1">
+
+</head>
+<body class="container">
+    <header class="fixed-top">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-white shadow-sm">
+            <div class="container-fluid">
+                <a class="navbar-brand text-success" href="#">Dreed Car Rental</a>
+            </div>
+        </nav>
+    </header>
 </body>
 </html>
