--- a/Front_End/view/customer_register.html
+++ b/Front_End/view/customer_register.html
@@ -26,5 +26,18 @@
             </div>
         </nav>
     </header>
+
+    <main>
+        <form class="row justify-content-between p-5 rounded-5 overflow-auto mt-5 id=customerForm">
+            <div class="mb-3 col-md-5">
+                <label for="cusName" class="form-label">Fill Name</label>
+                <input type="text" class="form-control" id="cusName" name="name">
+            </div>
+            <div class="mb-3 col-md-5">
+                <label for="cusEmail" class="form-label">Email Address</label>
+                <input type="text" class="form-control" id="cusEmail" name="name">
+            </div>
+        </form>
+    </main>
 </body>
 </html>
