--- a/Front_End/view/customer_register.html
+++ b/Front_End/view/customer_register.html
@@ -35,7 +35,35 @@
             </div>
             <div class="mb-3 col-md-5">
                 <label for="cusEmail" class="form-label">Email Address</label>
-                <input type="text" class="form-control" id="cusEmail" name="name">
+                <input type="text" class="form-control" id="cusEmail" name="email">
+            </div>
+            <div class="mb-3 col-md-5">
+                <label for="cusNic" class="form-label">NIC</label>
+                <input type="text" class="form-control" id="cusNic" name="nic"
+                aria-describedby="emailHelp">
+            </div>
+            <div class="mb-3 col-md-5">
+                <label for="cusUsername" class="form-label">Username</label>
+                <input type="text" class="form-control" id="cusUsername" name="username"
+                       aria-describedby="emailHelp">
+            </div>
+            <div class="mb-3 col-md-5">
+                <label for="cusLicense" class="form-label">License Number</label>
+                <input type="text" class="form-control" id="cusLicense" name="license"
+                       aria-describedby="emailHelp">
+            </div>
+            <div class="mb-3 col-md-5">
+                <label for="cusPassword" class="form-label">Password</label>
+                <input type="text" class="form-control" id="cusPassword" name="password"
+                       aria-describedby="emailHelp">
+            </div>
+            <div class="mb-3 col-md-5">
+                <label for="cusContact" class="form-label">Contact</label>
+                <input type="text" class="form-control" id="cusContact" name="contact"
+                       aria-describedby="emailHelp">
+            </div>
+            <div class="col-md-3">
+
             </div>
         </form>
     </main>
