Front_End : customer_register.html

--- a/Front_End/view/customer_register.html
+++ b/Front_End/view/customer_register.html
@@ -63,7 +63,16 @@
                        aria-describedby="emailHelp">
             </div>
             <div class="col-md-3">
-
+                <div class="image-context border border-2 rounded-3" id="cusLicenseImgContext">
+                </div>
+                <label for="cusLicenseImage" class="form-label">License Photo</label>
+                <input type="file" id="cusLicenseImage" class="form-control" name="licenseImage">
+            </div>
+            <div class="col-md-3">
+                <div class="image-context border border-2 rounded-3" id="cusNicImgContext">
+                </div>
+                <label for="cusNicImage" class="form-label">NIC Photo</label>
+                <input type="file" id="cusNicImage" class="form-control" name="nicImage">
             </div>
         </form>
     </main>
