Front_End : customer_register.html

--- a/Front_End/view/customer_register.html
+++ b/Front_End/view/customer_register.html
@@ -74,7 +74,14 @@
                 <label for="cusNicImage" class="form-label">NIC Photo</label>
                 <input type="file" id="cusNicImage" class="form-control" name="nicImage">
             </div>
+            <div class="mt-5 col-md-3 d-flex flex-column">
+                <button type="button" class="btn btn-primary mt-3" id="btnSaveCustomer">Submit</button>
+            </div>
         </form>
     </main>
+
+    <!--JavaScript for Bootstrap-->
+
+    <script src="../assets/js/bootstrap.min.js"></script>
 </body>
 </html>
