Front_End : customer_page.html

--- a/Front_End/view/customer_page.html
+++ b/Front_End/view/customer_page.html
@@ -21,7 +21,18 @@
                 aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
+                    </ul>
+                </div>
+                <section class="d-flex justify-content-center align-items-center gap-2">
+                    <i class="fs-4 bi-bell-fill text-secondary"></i>
+                    <i class="fs-4 bi-gear-fill text-secondary"></i>
+                    <a href="index.html" class="text-decoration-none mx-2 p-0"><p class="text-secondary m-0"><i
+                            class="fs-4 bi-box-arrow-left text-secondary"
+                    ></i>Logout</p> </a>
+                </section>
             </div>
         </nav>
     </header>
