--- a/Front_End/view/customer_page.html
+++ b/Front_End/view/customer_page.html
@@ -36,5 +36,17 @@
             </div>
         </nav>
     </header>
+    <main>
+        <div class="container-fluid min-vh-100" id="main-context">
+            <div class="row flex-nowrap">
+                <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 min-vh-100 position-fixed bg-white">
+                    <a href="/" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-decoration-none">
+                        <span class="fs-5 d-none d-sm-inline mt-5 py-2"></span>
+                    </a>
+                    <ul></ul>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
