Front_End : customer_page.html

--- a/Front_End/view/customer_page.html
+++ b/Front_End/view/customer_page.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Customer</title>
@@ -43,7 +43,46 @@
                     <a href="/" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-decoration-none">
                         <span class="fs-5 d-none d-sm-inline mt-5 py-2"></span>
                     </a>
-                    <ul></ul>
+                    <ul class="nav nav-pills flex-column mb-sm-auto p-2 mb-0 align-items-center align-items-sm-start"
+                        id="menu">
+
+                        <li class="nav-item nav-link align-middle px-0" id="btnHome">
+                            <a href="#" class="nav-link align-middle px-0">
+                                <i class="fs-4 bi-house text-secondary"></i>
+                                <span class="ms-1 d-none d-sm-inline text-secondary">Home</span>
+                            </a>
+                        </li>
+
+                        <li class="nav-item nav-link align-middle px-0" id="btnCar">
+                            <a href="#" class="nav-link align-middle px-0">
+                                <i class="fs-4 bi-car-front text-secondary"></i>
+                                <span class="ms-1 d-none d-sm-inline text-secondary">Browse Cars</span>
+                            </a>
+                        </li>
+
+                        <li class="nav-item nav-link align-middle px-0" id="btnCart">
+                            <a href="#" class="nav-link align-middle px-0">
+                                <i class="fs-4 bi-cart text-secondary"></i>
+                                <span class="ms-1 d-none d-sm-inline text-secondary">Cart</span>
+                            </a>
+                        </li>
+
+                        <li class="nav-item nav-link align-middle px-0" id="btnRent">
+                            <a href="#" class="nav-link align-middle px-0">
+                                <i class="fs-4 bi-cart text-secondary"></i>
+                                <span class="ms-1 d-none d-sm-inline text-secondary">Your Rent</span>
+                            </a>
+                        </li>
+
+                        <li class="nav-item nav-link align-middle px-0" id="btnManagePayment">
+                            <a href="#" class="nav-link align-middle px-0">
+                                <i class="fs-4 bi-cash-coin text-secondary"></i>
+                                <span class="ms-1 d-none d-sm-inline text-secondary">Payments</span>
+                            </a>
+                        </li>
+
+
+                    </ul>
                 </div>
             </div>
         </div>
