Front_End : customer_page.html

--- a/Front_End/view/customer_page.html
+++ b/Front_End/view/customer_page.html
@@ -81,8 +81,14 @@
                             </a>
                         </li>
 
-
                     </ul>
+
+                    <hr>
+
+                    <div class="pb-4 pointer-event" id="customer" data-bs-toggle="model" data-bs-target="#updateCustomerModel">
+                        <img src="../assets/images/man.png" alt="user" width="30" height="30" class="rounded-circle">
+                        <p class="d-none d-sm-inline mx-1" id="user">User</p>
+                    </div>
                 </div>
             </div>
         </div>
