--- a/Front_End/view/admin_dashboard.html
+++ b/Front_End/view/admin_dashboard.html
@@ -15,7 +15,21 @@
     <meta name="viewport" content="width=device-width initial-scale=1">
 
 </head>
-<body>
+<body class="bg-color">
+
+    <header class="fixed-top">
+        <nav class="navbar navbar-expand-lg bg-white">
+            <div class="container-fluid">
+                <a class="navbar-brand text-secondary" href="#"><i class="bi bi-font"> Dreed Car Rental</i></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <a href="index.html" class="text-decoration-none"><p class="text-secondary"><i class="bi bi-box-arrow-left text-secondary"></i>  Logout</p> </a>
+            </div>
+
+        </nav>
+    </header>
 
 </body>
 </html>
