--- a/Front_End/view/admin_dashboard.html
+++ b/Front_End/view/admin_dashboard.html
@@ -41,6 +41,59 @@
                             <span class="fs-5 d-none d-sm-inline mt-5 py-2"></span>
                         </a>
 
+                        <ul class="nav nav-pills flex-column mb-sm-auto p-2 mb-0 align-items-center align-items-sm-start" id="menu">
+
+                            <li class="nav-item nav-link align-middle px-0" id="btnHome">
+                                <a href="#" class="nav-link align-middle px-0">
+                                    <i class="fs-4 bi-house text-secondary"></i>
+                                    <span class="ms-1 d-none d-sm-inline text-secondary">Home</span>
+                                </a>
+                            </li>
+
+                            <li class="nav-item nav-link align-middle px-0" id="btnCustomer">
+                                <a href="#" class="nav-link align-middle px-0">
+                                    <i class="fs-4 bi-people text-secondary"></i>
+                                    <span class="ms-1 d-none d-sm-inline text-secondary">Manage Customers</span>
+                                </a>
+                            </li>
+
+                            <li class="nav-item nav-link align-middle px-0" id="btnCar">
+                                <a href="#" class="nav-link align-middle px-0">
+                                    <i class="fs-4 bi-car-front text-secondary"></i>
+                                    <span class="ms-1 d-none d-sm-inline text-secondary">Manage Cars</span>
+                                </a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a href="#" class="nav-link align-middle px-0" id="btnDriver">
+                                    <i class="fs-4 bi-person-bounding-box text-secondary"></i>
+                                    <span class="ms-1 d-none d-sm-inline text-secondary">Manage Drivers</span>
+                                </a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a href="#" class="nav-link align-middle px-0" id="btnRent">
+                                    <i class="fs-4 bi-cart2 text-secondary"></i>
+                                    <span class="ms-1 d-none d-sm-inline text-secondary">Manage Rents</span>
+                                </a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a href="#" class="nav-link align-middle px-0" id="btnManagePayment">
+                                    <i class="fs-4 bi-cash-coin text-secondary"></i>
+                                    <span class="ms-1 d-none d-sm-inline text-secondary">Payments</span>
+                                </a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a href="#" class="nav-link align-middle px-0" id="btnReport">
+                                    <i class="fs-4 bi-cash-coin text-secondary"></i>
+                                    <span class="ms-1 d-none d-sm-inline text-secondary">Reports</span>
+                                </a>
+                            </li>
+
+                        </ul>
+
                     </div>
                 </div>
             </div>
