Front_End : admin_dashboard.html

--- a/Front_End/view/admin_dashboard.html
+++ b/Front_End/view/admin_dashboard.html
@@ -94,7 +94,90 @@
 
                         </ul>
 
+                        <hr>
+                        <div class="col p-4">
+                            <img src="../assets/images/team.png" alt="user" width="30" height="30" class="rounded-circle">
+                            <p class="d-none d-sm-inline mx-1 text-secondary" id="user">User</p>
+                        </div>
                     </div>
+                </div>
+                <div class="col p-3">
+
+                    <main class="mt-5" id="home">
+                        <section class="card p-5 row justify-content-center align-content-end gap-5 text-dark">
+                            <div class="card p-2 col col-xxl-2 col-sm-12 col-md-3 border border-0">
+                                <div class="row g-0">
+                                    <div class="col-md-4">
+                                        <img src="../assets/images/teams.png" alt="users" width="50" height="50">
+                                    </div>
+                                    <div class="col-md-8">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Registered Users</h5>
+                                            <p class="card-text m-0 p-0" id="reg-users" style="font-size: 50px;">10</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="card p-2 col col-xxl-2 col-sm-12 col-md-3 border border-0">
+                                <div class="row g-0">
+                                    <div class="col-md-4">
+                                        <img src="../assets/images/book.png" class="img-fluid rounded-start" alt="users" width="50" height="50">
+                                    </div>
+                                    <div class="col-md-8">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Total Bookings</h5>
+                                            <p class="card-text m-0 p-0" id="rent-count" style="font-size: 50px;">10</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="card p-2 col col-xxl-2 col-sm-12 col-md-3 border border-0">
+                                <div class="row g-0">
+                                    <div class="col-md-4">
+                                        <img src="../assets/images/car-collision.png" class="img-fluid rounded-start" alt="users" width="50" height="50">
+                                    </div>
+                                    <div class="col-md-8">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Reserved Cars</h5>
+                                            <p class="card-text m-0 p-0" id="reserved-cars" style="font-size: 50px;">10</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="card p-2 col col-xxl-2 col-sm-12 col-md-3 border border-0">
+                                <div class="row g-0">
+                                    <div class="col-md-4">
+                                        <img src="../assets/images/car-wash.png" class="img-fluid rounded-start" alt="users" width="50" height="50">
+                                    </div>
+                                    <div class="col-md-8">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Available Cars</h5>
+                                            <p class="card-text m-0 p-0" id="available-cars" style="font-size: 50px;">10</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="card p-2 col col-xxl-2 col-sm-12 col-md-3 border border-0">
+                                <div class="row g-0">
+                                    <div class="col-md-4">
+                                        <img src="../assets/images/maintenance.png" class="img-fluid rounded-start" alt="users" width="50" height="50">
+                                    </div>
+                                    <div class="col-md-8">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Maintaining Cars</h5>
+                                            <p class="card-text m-0 p-0" id="maintain-cars" style="font-size: 50px;">10</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+
+                        </section>
+                    </main>
                 </div>
             </div>
         </div>
