--- a/Front_End/view/admin_dashboard.html
+++ b/Front_End/view/admin_dashboard.html
@@ -104,11 +104,13 @@
                 <div class="col p-3">
 
                     <main class="mt-5" id="home">
-                        <section class="card p-5 row justify-content-center align-content-end gap-5 text-dark">
+
+                        <section class="cards p-5 row justify-content-center align-items-end gap-5 text-dark">
+
                             <div class="card p-2 col col-xxl-2 col-sm-12 col-md-3 border border-0">
                                 <div class="row g-0">
                                     <div class="col-md-4">
-                                        <img src="../assets/images/teams.png" alt="users" width="50" height="50">
+                                        <img src="../assets/images/teams.png" class="img-fluid rounded-start" alt="...">
                                     </div>
                                     <div class="col-md-8">
                                         <div class="card-body">
@@ -122,7 +124,7 @@
                             <div class="card p-2 col col-xxl-2 col-sm-12 col-md-3 border border-0">
                                 <div class="row g-0">
                                     <div class="col-md-4">
-                                        <img src="../assets/images/book.png" class="img-fluid rounded-start" alt="users" width="50" height="50">
+                                        <img src="../assets/images/book.png" class="img-fluid rounded-start" alt="...">
                                     </div>
                                     <div class="col-md-8">
                                         <div class="card-body">
@@ -136,7 +138,7 @@
                             <div class="card p-2 col col-xxl-2 col-sm-12 col-md-3 border border-0">
                                 <div class="row g-0">
                                     <div class="col-md-4">
-                                        <img src="../assets/images/car-collision.png" class="img-fluid rounded-start" alt="users" width="50" height="50">
+                                        <img src="../assets/images/car-collision.png" class="img-fluid rounded-start" alt="...">
                                     </div>
                                     <div class="col-md-8">
                                         <div class="card-body">
@@ -150,7 +152,7 @@
                             <div class="card p-2 col col-xxl-2 col-sm-12 col-md-3 border border-0">
                                 <div class="row g-0">
                                     <div class="col-md-4">
-                                        <img src="../assets/images/car-wash.png" class="img-fluid rounded-start" alt="users" width="50" height="50">
+                                        <img src="../assets/images/car-wash.png" class="img-fluid rounded-start" alt="...">
                                     </div>
                                     <div class="col-md-8">
                                         <div class="card-body">
@@ -164,7 +166,7 @@
                             <div class="card p-2 col col-xxl-2 col-sm-12 col-md-3 border border-0">
                                 <div class="row g-0">
                                     <div class="col-md-4">
-                                        <img src="../assets/images/maintenance.png" class="img-fluid rounded-start" alt="users" width="50" height="50">
+                                        <img src="../assets/images/maintenance.png" class="img-fluid rounded-start" alt="...">
                                     </div>
                                     <div class="col-md-8">
                                         <div class="card-body">
@@ -175,8 +177,44 @@
                                 </div>
                             </div>
 
+                        </section>
+
+                        <section class="cards px-5 row justify-content-center align-items-end gap-5 text-dark">
+
+                            <div class="card mb-5 p-2 col col-xxl-2 col-sm-12 col-md-3 border border-0">
+                                <div class="row g-0">
+                                    <div class="col-md-4">
+                                        <img src="../assets/images/seatbelt.png" class="img-fluid rounded-start" alt="...">
+                                    </div>
+                                    <div class="col-md-8">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Available Drivers</h5>
+                                            <p class="card-text m-0 p-0" id="available-drivers" style="font-size: 50px;">10</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="card mb-5 p-2 col col-xxl-2 col-sm-12 col-md-3 border border-0">
+                                <div class="row g-0">
+                                    <div class="col-md-4">
+                                        <img src="../assets/images/shipment.png" class="img-fluid rounded-start" alt="...">
+                                    </div>
+                                    <div class="col-md-8">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Reserved Drivers</h5>
+                                            <p class="card-text m-0 p-0" id="reserved-drivers" style="font-size: 50px;">10</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+
 
                         </section>
+
+
+
                     </main>
                 </div>
             </div>
