--- a/Front_End/view/admin_dashboard.html
+++ b/Front_End/view/admin_dashboard.html
@@ -26,7 +26,7 @@
 <header class="fixed-top">
     <nav class="navbar navbar-expand-lg bg-white">
         <div class="container-fluid">
-            <a class="navbar-brand text-secondary" href="#"><i class="bi bi-front"> Easy Car Rental</i></a>
+            <a class="navbar-brand text-secondary" href="#"><i class="bi bi-front"> Dreed Car Rental</i></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
