--- a/Front_End/view/car_page.html
+++ b/Front_End/view/car_page.html
@@ -17,7 +17,22 @@
     <meta name="viewport" content="width=device-width initial-scale=1">
 
 </head>
-<body>
+<body class="bg-color">
+    <header class="fixed-top">
+        <nav class="navbar navbar-expand-lg bg-white">
 
+            <div class="container-fluid">
+                <a class="navbar-brand text-secondary" href="#"><i class="bi bi-front"> Dreed Car Rental</i></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <a href="index.html" class="text-decoration-none"><p class="text-secondary"><i class="bi bi-backspace"
+                ></i> Back </p></a>
+            </div>
+        </nav>
+    </header>
 </body>
 </html>
