--- a/Front_End/view/driver_dashboard.html
+++ b/Front_End/view/driver_dashboard.html
@@ -18,7 +18,27 @@
     <meta name="viewport" content="width=device-width initial-scale=1">
 
 </head>
-<body>
+<body class="bg-color">
+
+<header class="fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-white">
+        <div class="container-fluid">
+            <a class="navbar-brand text-secondary" href="#"><i class="bi bi-front"> Easy Car Rental</i></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                </ul>
+            </div>
+
+            <a href="index.html" class="text-decoration-none"><p class="text-secondary"><i class="bi bi-box-arrow-left text-secondary"></i> Logout</p></a>
+
+        </div>
+    </nav>
+</header>
 
 </body>
 </html>
