Front_End : driver_dashboard.html

--- a/Front_End/view/driver_dashboard.html
+++ b/Front_End/view/driver_dashboard.html
@@ -40,5 +40,61 @@
     </nav>
 </header>
 
+<main>
+
+    <div class="container-fluid" id="main-context">
+        <div class="row flex-nowrap">
+            <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-white shadow-sm min-vh-100">
+                <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100 position-fixed bg-white">
+                    <a href="/"
+                       class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+                        <span class="fs-5 d-none d-sm-inline mt-5 py-2"></span>
+                    </a>
+                    <ul class="nav nav-pills flex-column mb-sm-auto p-2 mb-0 align-items-center align-items-sm-start"
+                        id="menu">
+                        <li class="nav-item nav-link align-middle px-0" id="btnHome">
+                            <a href="#" class="nav-link align-middle px-0">
+                                <i class="fs-4 bi-house text-secondary"></i> <span
+                                    class="ms-1 d-none d-sm-inline text-secondary">Home</span>
+                            </a>
+                        </li>
+                    </ul>
+                    <hr>
+                    <div class="pb-4">
+                        <img src="../assets/images/man.png" alt="user" width="30" height="30"
+                             class="rounded-circle">
+                        <p class="d-none d-sm-inline mx-1 text-secondary" id="user">User</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col p-3">
+                <p class="mt-5 h4 text-secondary text-center">Driver</p>
+                <main class="">
+                    <section class="mt-5 shadow-sm">
+                        <table class="table table-striped">
+                            <thead class="tblDriverSchedule table-dark">
+                            <tr>
+                                <th>Rent Id</th>
+                                <th>Pick Up Date</th>
+                                <th>Pick Up Time</th>
+                                <th>Return Date</th>
+                                <th>Return Time</th>
+                                <th>Car Reg. Number</th>
+                            </tr>
+                            </thead>
+                            <tbody id="tblDriverSchedule">
+
+                            </tbody>
+                        </table>
+                    </section>
+                </main>
+
+            </div>
+        </div>
+    </div>
+
+</main>
+
+
 </body>
 </html>
