--- a/Front_End/view/driver_dashboard.html
+++ b/Front_End/view/driver_dashboard.html
@@ -23,7 +23,7 @@
 <header class="fixed-top">
     <nav class="navbar navbar-expand-lg navbar-dark bg-white">
         <div class="container-fluid">
-            <a class="navbar-brand text-secondary" href="#"><i class="bi bi-front"> Easy Car Rental</i></a>
+            <a class="navbar-brand text-secondary" href="#"><i class="bi bi-front"> Dreed Car Rental</i></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -61,7 +61,7 @@
                     </ul>
                     <hr>
                     <div class="pb-4">
-                        <img src="../assets/images/man.png" alt="user" width="30" height="30"
+                        <img src="../assets/images/man.png" alt="user" width="45" height="45"
                              class="rounded-circle">
                         <p class="d-none d-sm-inline mx-1 text-secondary" id="user">User</p>
                     </div>
