--- a/Front_End/view/login_form.html
+++ b/Front_End/view/login_form.html
@@ -32,6 +32,9 @@
 
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
+    <script src="../controller/LoginFormController.js"></script>
+
+    <script src="../assets/js/jquery-3.6.1.min.js"></script>
 
 </body>
 </html>
