--- a/Front_End/view/customer_register.html
+++ b/Front_End/view/customer_register.html
@@ -83,5 +83,8 @@
     <!--JavaScript for Bootstrap-->
 
     <script src="../assets/js/bootstrap.min.js"></script>
+    <script src="../assets/js/jquery-3.6.1.min.js"></script>
+    <script src="../controller/CustomerRegistrationController.js"></script>
+
 </body>
 </html>
