--- a/Front_End/view/customer_register.html
+++ b/Front_End/view/customer_register.html
@@ -84,6 +84,8 @@
 
     <script src="../assets/js/bootstrap.min.js"></script>
     <script src="../assets/js/jquery-3.6.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="../util/AlertsPopUps.js"></script>
     <script src="../controller/CustomerRegistrationController.js"></script>
 
 </body>
