--- a/Front_End/view/customer_register.html
+++ b/Front_End/view/customer_register.html
@@ -84,11 +84,21 @@
 
     <script src="../assets/js/bootstrap.min.js"></script>
 
+    <!--JavaScript for jQuery -->
 
     <script src="../assets/js/jquery-3.6.1.min.js"></script>
 
+    <!--Sweet Alert cdn-->
+
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+    <!--Util files for page functions-->
+
+    <script src="../util/LoadImagesUtil.js"></script>
     <script src="../util/AlertsPopUps.js"></script>
+
+    <!--Page Controller-->
+
     <script src="../controller/CustomerRegistrationController.js"></script>
 
 </body>
