--- a/Front_End/view/customer_register.html
+++ b/Front_End/view/customer_register.html
@@ -95,6 +95,7 @@
     <!--Util files for page functions-->
 
     <script src="../util/LoadImagesUtil.js"></script>
+    <script src="../util/ValidationUtil.js"></script>
     <script src="../util/AlertsPopUps.js"></script>
 
     <!--Page Controller-->
