--- a/Front_End/view/customer_register.html
+++ b/Front_End/view/customer_register.html
@@ -54,14 +54,20 @@
             </div>
             <div class="mb-3 col-md-5">
                 <label for="cusPassword" class="form-label">Password</label>
-                <input type="text" class="form-control" id="cusPassword" name="password"
-                       aria-describedby="emailHelp">
+                <input type="text" class="form-control" id="cusPassword" name="password">
             </div>
+
             <div class="mb-3 col-md-5">
                 <label for="cusContact" class="form-label">Contact</label>
                 <input type="text" class="form-control" id="cusContact" name="contact"
                        aria-describedby="emailHelp">
             </div>
+
+            <div class="mb-3 col-md-5">
+                <label for="cusPassword" class="form-label">Confirm Password</label>
+                <input type="text" class="form-control" id="cusRe-password">
+            </div>
+
             <div class="col-md-3">
                 <div class="image-context border border-2 rounded-3" id="cusLicenseImgContext">
                 </div>
