Front_End : DriverPageController.js

--- a/Front_End/view/driver_dashboard.html
+++ b/Front_End/view/driver_dashboard.html
@@ -95,6 +95,27 @@
 
 </main>
 
+<!--JavaScript for Bootstrap-->
+
+<script src="../assets/js/bootstrap.min.js"></script>
+
+<!--JavaScript for jQuery -->
+
+<script src="../assets/js/jquery-3.6.1.min.js"></script>
+
+<!--Sweet Alert cdn-->
+
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+<!--Util files for page functions-->
+
+<script src="../util/LoadImagesUtil.js"></script>
+<script src="../util/ValidationUtil.js"></script>
+<script src="../util/AlertsPopUps.js"></script>
+
+<!--Page Controller-->
+
+<script src="../controller/DriverPageController.js"></script>
 
 </body>
 </html>
