--- a/Front_End/view/customer_page.html
+++ b/Front_End/view/customer_page.html
@@ -398,11 +398,27 @@
     </div>
 </main>
 
-<!-- JavaScript for Bootstrap -->
+<!--JavaScript for Bootstrap-->
+
 <script src="../assets/js/bootstrap.min.js"></script>
 
-<!-- Sweet Alert -->
-<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<!--JavaScript for jQuery -->
+
+<script src="../assets/js/jquery-3.6.1.min.js"></script>
+
+<!--Sweet Alert cdn-->
+
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+<!--Util files for page functions-->
+
+<script src="../util/LoadImagesUtil.js"></script>
+<script src="../util/ValidationUtil.js"></script>
+<script src="../util/AlertsPopUps.js"></script>
+
+<!--Page Controller-->
+
+<script src="../controller/CustomerController.js"></script>
 
 </body>
 </html>
