--- a/Front_End/view/customer_page.html
+++ b/Front_End/view/customer_page.html
@@ -413,6 +413,7 @@
 <!--Util files for page functions-->
 
 <script src="../util/LoadImagesUtil.js"></script>
+<script src="../util/baseUrl.js"></script>
 <script src="../util/ValidationUtil.js"></script>
 <script src="../util/AlertsPopUps.js"></script>
 
