--- a/Front_End/view/car_page.html
+++ b/Front_End/view/car_page.html
@@ -88,10 +88,12 @@
     <script src="../util/LoadImagesUtil.js"></script>
     <script src="../util/baseUrl.js"></script>
     <script src="../util/AlertsPopUps.js"></script>
+    <script src="../util/ValidationUtil.js"></script>
 
     <!--Page Controller-->
 
     <script src="../controller/CarPageController.js"></script>
+    <script src="https://canvasjs.com/assets/script/jquery.canvasjs.min.js"></script>
 
 </body>
 </html>
