--- a/Front_End/view/index.html
+++ b/Front_End/view/index.html
@@ -56,8 +56,17 @@
 </main>
 
 <!-- JavaScript For Bootstrap -->
-<script src="../assets/js/bootstrap.bundle.min.js"></script>
 
+<script src="../assets/js/bootstrap.min.js"></script>
+<script src="../assets/js/jquery-3.6.1.min.js"></script>
 
+<!--Utils-->
+
+<script src="../util/LoadImagesUtil.js"></script>
+<script src="../util/baseUrl.js"></script>
+
+<!--controller for page-->
+
+<script src="../controller/IndexPageController.js"></script>
 </body>
 </html>
