--- a/Front_End/view/admin_dashboard.html
+++ b/Front_End/view/admin_dashboard.html
@@ -917,18 +917,25 @@
 <!-- JavaScript For Bootstrap -->
 <script src="../assets/js/bootstrap.min.js"></script>
 
-<!--JavaScript for jQuery -->
-
-<script src="../assets/js/jquery-3.6.1.min.js"></script>
 
 <!--Sweet Alert cdn-->
 
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
+<!--JavaScript for jQuery -->
+<script src="../assets/js/jquery-3.6.1.min.js"></script>
+
+
+
+
+
 <script src="../util/LoadImagesUtil.js"></script>
 <script src="../util/baseUrl.js"></script>
-<script src="../util/ValidationUtil.js"></script>
 <script src="../util/AlertsPopUps.js"></script>
+<script src="../util/ValidationUtil.js"></script>
+
+
+<script src="https://canvasjs.com/assets/script/jquery.canvasjs.min.js"></script>
 
 <script src="../controller/AdminDashboardController.js"></script>
 
