--- a/Front_End/view/customer_register.html
+++ b/Front_End/view/customer_register.html
@@ -8,105 +8,132 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../assets/css/styles.css">
 
-    <meta name="viewport" content="width=device-width initial-scale=1">
+    <style>
+        /* Add custom CSS styles here */
+        body {
+            background-color: #f7f7f7;
+        }
 
+        .navbar {
+            background-color: #3498db;
+        }
+
+        .navbar-brand {
+            font-size: 24px;
+        }
+
+        .form-label {
+            font-weight: bold;
+        }
+
+        .form-control {
+            border: 2px solid #3498db;
+        }
+
+        .btn-primary {
+            background-color: #3498db;
+            border: none;
+        }
+
+        .image-context {
+            width: 150px;
+            height: 150px;
+            background-color: #f0f0f0;
+        }
+
+        /* Add more custom styles as needed */
+    </style>
+
+    <meta name="viewport" content="width=device-width initial-scale=1">
 </head>
 <body class="container">
-    <header class="fixed-top">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-white shadow-sm">
-            <div class="container-fluid">
-                <a class="navbar-brand text-success" href="#">Dreed Car Rental</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-                aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0"></ul>
-                </div>
+<header class="fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-white shadow-sm">
+        <div class="container-fluid">
+            <a class="navbar-brand text-success" href="#">Dreed Car Rental</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                </ul>
             </div>
-        </nav>
-    </header>
+        </div>
+    </nav>
+</header>
 
-    <main>
-        <form class="row justify-content-between p-5 rounded-5 overflow-auto mt-5 id=customerForm">
-            <div class="mb-3 col-md-5">
-                <label for="cusName" class="form-label">Fill Name</label>
-                <input type="text" class="form-control" id="cusName" name="name">
-            </div>
-            <div class="mb-3 col-md-5">
-                <label for="cusEmail" class="form-label">Email Address</label>
-                <input type="text" class="form-control" id="cusEmail" name="email">
-            </div>
-            <div class="mb-3 col-md-5">
-                <label for="cusNic" class="form-label">NIC</label>
-                <input type="text" class="form-control" id="cusNic" name="nic"
-                aria-describedby="emailHelp">
-            </div>
-            <div class="mb-3 col-md-5">
-                <label for="cusUsername" class="form-label">Username</label>
-                <input type="text" class="form-control" id="cusUsername" name="username"
-                       aria-describedby="emailHelp">
-            </div>
-            <div class="mb-3 col-md-5">
-                <label for="cusLicense" class="form-label">License Number</label>
-                <input type="text" class="form-control" id="cusLicense" name="license"
-                       aria-describedby="emailHelp">
-            </div>
-            <div class="mb-3 col-md-5">
-                <label for="cusPassword" class="form-label">Password</label>
-                <input type="text" class="form-control" id="cusPassword" name="password">
-            </div>
+<main>
+    <form class="row justify-content-between p-5 rounded-5 overflow-auto mt-5" id="customerForm">
+        <div class="mb-3 col-md-5">
+            <label for="cusName" class="form-label">Full Name</label>
+            <input type="text" class="form-control" id="cusName" name="name">
+        </div>
+        <div class="mb-3 col-md-5">
+            <label for="cusEmail" class="form-label">Email address</label>
+            <input type="email" class="form-control" id="cusEmail" name="email">
+        </div>
+        <div class="mb-3 col-md-5">
+            <label for="cusNic" class="form-label">NIC</label>
+            <input type="text" class="form-control" id="cusNic" name="nic" aria-describedby="emailHelp">
+        </div>
+        <div class="mb-3 col-md-5">
+            <label for="cusUsername" class="form-label">Username</label>
+            <input type="text" class="form-control" id="cusUsername" name="username" aria-describedby="emailHelp">
+        </div>
+        <div class="mb-3 col-md-5">
+            <label for="cusLicense" class="form-label">License Number</label>
+            <input type="text" class="form-control" id="cusLicense" name="license" aria-describedby="emailHelp">
+        </div>
+        <div class="mb-3 col-md-5">
+            <label for="cusPassword" class="form-label">Password</label>
+            <input type="password" class="form-control" id="cusPassword" name="password">
+        </div>
+        <div class="mb-3 col-md-5">
+            <label for="cusAddress" class="form-label">Address</label>
+            <input type="text" class="form-control" id="cusAddress" name="address" aria-describedby="emailHelp">
+        </div>
+        <div class="mb-3 col-md-5">
+            <label for="cusRe-password" class="form-label">Confirm Password</label>
+            <input type="password" class="form-control" id="cusRe-password">
+        </div>
+        <div class="mb-3 col-md-5">
+            <label for="cusContact" class="form-label">Contact Number</label>
+            <input type="text" class="form-control" id="cusContact" name="contact">
+        </div>
+        <div class="col-md-5">
+            <div class="image-context border border-2 rounded-3" id="cusLicenseImgContext"></div>
+            <label for="cusLicenseImage" class="form-label">License Photo</label>
+            <input type="file" id="cusLicenseImage" class="form-control" name="licenseImage">
+        </div>
+        <div class="mb-3 col-md-5 d-flex flex-column">
+            <div class="image-context border border-2 rounded-3" id="cusNicImgContext"></div>
+            <label for="cusNicImage" class="form-label">NIC Photo</label>
+            <input type="file" id="cusNicImage" class="form-control" name="nicImage">
+        </div>
+        <div class="mt-5 col-md-5 d-flex flex-column">
+            <button type="button" class="btn btn-primary mt-3" id="btnSaveCustomer">Submit</button>
+        </div>
+    </form>
+</main>
 
-            <div class="mb-3 col-md-5">
-                <label for="cusContact" class="form-label">Contact</label>
-                <input type="text" class="form-control" id="cusContact" name="contact"
-                       aria-describedby="emailHelp">
-            </div>
+<!-- JavaScript for Bootstrap -->
+<script src="../assets/js/bootstrap.min.js"></script>
 
-            <div class="mb-3 col-md-5">
-                <label for="cusPassword" class="form-label">Confirm Password</label>
-                <input type="text" class="form-control" id="cusRe-password">
-            </div>
+<!-- JavaScript for jQuery -->
+<script src="../assets/js/jquery-3.6.1.min.js"></script>
 
-            <div class="col-md-3">
-                <div class="image-context border border-2 rounded-3" id="cusLicenseImgContext">
-                </div>
-                <label for="cusLicenseImage" class="form-label">License Photo</label>
-                <input type="file" id="cusLicenseImage" class="form-control" name="licenseImage">
-            </div>
-            <div class="col-md-3">
-                <div class="image-context border border-2 rounded-3" id="cusNicImgContext">
-                </div>
-                <label for="cusNicImage" class="form-label">NIC Photo</label>
-                <input type="file" id="cusNicImage" class="form-control" name="nicImage">
-            </div>
-            <div class="mt-5 col-md-3 d-flex flex-column">
-                <button type="button" class="btn btn-primary mt-3" id="btnSaveCustomer">Submit</button>
-            </div>
-        </form>
-    </main>
+<!-- Sweet Alert CDN -->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
-    <!--JavaScript for Bootstrap-->
+<!-- Util files for page functions -->
+<script src="../util/LoadImagesUtil.js"></script>
+<script src="../util/baseUrl.js"></script>
+<script src="../util/ValidationUtil.js"></script>
+<script src="../util/AlertsPopUps.js"></script>
 
-    <script src="../assets/js/bootstrap.min.js"></script>
-
-    <!--JavaScript for jQuery -->
-
-    <script src="../assets/js/jquery-3.6.1.min.js"></script>
-
-    <!--Sweet Alert cdn-->
-
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
-    <!--Util files for page functions-->
-
-    <script src="../util/LoadImagesUtil.js"></script>
-    <script src="../util/baseUrl.js"></script>
-    <script src="../util/AlertsPopUps.js"></script>
-
-    <!--Page Controller-->
-
-    <script src="../controller/CustomerRegistrationController.js"></script>
-
+<!-- Page Controller -->
+<script src="../controller/CustomerRegistrationController.js"></script>
 </body>
 </html>
