--- a/Front_End/view/car_page.html
+++ b/Front_End/view/car_page.html
@@ -14,6 +14,58 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../assets/css/styles.css">
 
+    <style>
+        body {
+            background-color: #f5f5f5;
+            font-family: 'Poppins', sans-serif;
+        }
+
+        header {
+            background-color: #fff;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+            padding: 15px 0;
+        }
+
+        .navbar-brand {
+            font-size: 24px;
+        }
+
+        .navbar-toggler {
+            color: #333;
+        }
+
+        a.navbar-brand i {
+            font-size: 1.5rem;
+        }
+
+        a.navbar-brand i.bi-front {
+            vertical-align: middle;
+        }
+
+        a.text-decoration-none {
+            color: #333;
+            text-decoration: none;
+        }
+
+        p.text-secondary i {
+            font-size: 1.2rem;
+            vertical-align: middle;
+        }
+
+        main {
+            padding: 2rem;
+        }
+
+        .form-select, .form-control {
+            width: 100%;
+            max-width: 350px;
+        }
+
+        .row-cols-1.row-cols-md-3.g-4 {
+            margin-top: 2rem;
+        }
+    </style>
+
     <meta name="viewport" content="width=device-width initial-scale=1">
 
 </head>
