--- a/Front_End/view/admin_dashboard.html
+++ b/Front_End/view/admin_dashboard.html
@@ -930,7 +930,7 @@
 
 
 <script src="../util/LoadImagesUtil.js"></script>
-<script src="../util/baseUrl.js"></script>
+<script src="../util/BaseUrl.js"></script>
 <script src="../util/AlertsPopUps.js"></script>
 <script src="../util/ValidationUtil.js"></script>
 
