--- a/Front_End/view/driver_dashboard.html
+++ b/Front_End/view/driver_dashboard.html
@@ -110,7 +110,7 @@
 <!--Util files for page functions-->
 
 <script src="../util/LoadImagesUtil.js"></script>
-<script src="../util/baseUrl.js"></script>
+<script src="../util/BaseUrl.js"></script>
 <script src="../util/AlertsPopUps.js"></script>
 
 <!--Page Controller-->
