--- a/Front_End/view/index.html
+++ b/Front_End/view/index.html
@@ -63,7 +63,7 @@
 <!--Utils-->
 
 <script src="../util/LoadImagesUtil.js"></script>
-<script src="../util/baseUrl.js"></script>
+<script src="../util/BaseUrl.js"></script>
 
 <!--controller for page-->
 
