--- a/Front_End/view/customer_register.html
+++ b/Front_End/view/customer_register.html
@@ -129,7 +129,7 @@
 
 <!-- Util files for page functions -->
 <script src="../util/LoadImagesUtil.js"></script>
-<script src="../util/baseUrl.js"></script>
+<script src="../util/BaseUrl.js"></script>
 <script src="../util/ValidationUtil.js"></script>
 <script src="../util/AlertsPopUps.js"></script>
 
