--- a/Front_End/view/car_page.html
+++ b/Front_End/view/car_page.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../assets/css/styles.css">
 
-    <style>
+    <!--<style>
         body {
             background-color: #f5f5f5;
             font-family: 'Poppins', sans-serif;
@@ -64,7 +64,7 @@
         .row-cols-1.row-cols-md-3.g-4 {
             margin-top: 2rem;
         }
-    </style>
+    </style>-->
 
     <meta name="viewport" content="width=device-width initial-scale=1">
 
