--- a/Front_End/view/customer_register.html
+++ b/Front_End/view/customer_register.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../assets/css/styles.css">
 
-    <style>
+    <!--<style>
         /* Add custom CSS styles here */
         body {
             background-color: #f7f7f7;
@@ -42,7 +42,7 @@
         }
 
         /* Add more custom styles as needed */
-    </style>
+    </style>-->
 
     <meta name="viewport" content="width=device-width initial-scale=1">
 </head>
