--- a/Front_End/view/admin_dashboard.html
+++ b/Front_End/view/admin_dashboard.html
@@ -25,14 +25,14 @@
 <header class="fixed-top">
     <nav class="navbar navbar-expand-lg bg-white">
         <div class="container-fluid">
-            <a class="navbar-brand text-secondary" href="#"><i class="bi bi-front">  Dreed Car Rental </i></a>
+            <a class="navbar-brand text-secondary" href="#"><i class="bi bi-car-front" style="color: #1a1d20;"></i>   Dreed Car Rentals</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <a href="index.html" class="text-decoration-none"><p class="text-secondary"><i class="bi bi-box-arrow-left text-secondary"></i> Logout</p></a>
+            <a href="index.html" class="text-decoration-none"><p class="text-secondary"><i class="bi bi-door-closed-fill"></i>Logout</p></a>
 
         </div>
     </nav>
@@ -52,49 +52,49 @@
                         id="menu">
                         <li class="nav-item nav-link align-middle px-0" id="btnHome">
                             <a href="#" class="nav-link align-middle px-0">
-                                <i class="fs-4 bi-house text-secondary"></i> <span
+                                <i class="fs-4 bi-house-gear-fill text-secondary"></i> <span
                                     class="ms-1 d-none d-sm-inline text-secondary">Home</span>
                             </a>
                         </li>
 
                         <li class="nav-item nav-link align-middle px-0" id="btnCustomer">
                             <a href="#" class="nav-link align-middle px-0">
-                                <i class="fs-4 bi-people text-secondary"></i> <span
+                                <i class="fs-4 bi-person-check-fill"></i> <span
                                     class="ms-1 d-none d-sm-inline text-secondary">Manage Customers</span>
                             </a>
                         </li>
 
                         <li class="nav-item nav-link align-middle px-0" id="btnCar">
                             <a href="#" class="nav-link align-middle px-0">
-                                <i class="fs-4 bi-car-front text-secondary"></i> <span
+                                <i class="fs-4 bi-ev-front"></i> <span
                                     class="ms-1 d-none d-sm-inline text-secondary">Manage Cars</span>
                             </a>
                         </li>
 
                         <li class="nav-item">
                             <a href="#" class="nav-link align-middle px-0" id="btnDriver">
-                                <i class="fs-4 bi-person-bounding-box text-secondary"></i> <span
+                                <i class="fs-4 bi-person-vcard-fill text-secondary"></i> <span
                                     class="ms-1 d-none d-sm-inline text-secondary">Manage Drivers</span>
                             </a>
                         </li>
 
                         <li class="nav-item">
                             <a href="#" class="nav-link align-middle px-0" id="btnRent">
-                                <i class="fs-4 bi-cart2 text-secondary"></i> <span
+                                <i class="fs-4 bi-journal-text text-secondary"></i> <span
                                     class="ms-1 d-none d-sm-inline text-secondary">Manage Rents</span>
                             </a>
                         </li>
 
                         <li class="nav-item">
                             <a href="#" class="nav-link align-middle px-0" id="btnManagePayment">
-                                <i class="fs-4 bi-cash-coin text-secondary"></i> <span
+                                <i class="fs-4 bi-wallet2 text-secondary"></i> <span
                                     class="ms-1 d-none d-sm-inline text-secondary">Payments</span>
                             </a>
                         </li>
 
                         <li class="nav-item">
                             <a href="#" class="nav-link align-middle px-0" id="btnReport">
-                                <i class="fs-4 bi-bar-chart text-secondary"></i> <span
+                                <i class="fs-4 bi-graph-up-arrow text-secondary"></i> <span
                                     class="ms-1 d-none d-sm-inline text-secondary">Reports</span>
                             </a>
                         </li>
@@ -102,7 +102,7 @@
                     </ul>
                     <hr>
                     <div class="pb-4">
-                        <img src="../assets/image/man.png" alt="user" width="30" height="30"
+                        <img src="../assets/image/man.png" alt="user" width="60" height="60"
                              class="rounded-circle">
                         <p class="d-none d-sm-inline mx-1 text-secondary" id="user">User</p>
                     </div>
