--- a/Front_End/view/car_page.html
+++ b/Front_End/view/car_page.html
@@ -22,14 +22,14 @@
 <header class="fixed-top">
     <nav class="navbar navbar-expand-lg bg-white">
         <div class="container-fluid">
-            <a class="navbar-brand text-secondary" href="#"><i class="bi bi-front"> Dreed Car Rental</i></a>
+            <a class="navbar-brand text-secondary" href="#"><i class="bi bi-car-front" style="color: #1a1d20;"></i>   Dreed Car Rentals</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <a href="index.html" class="text-decoration-none"><p class="text-secondary"><i class="bi bi-backspace"></i></i> Back</p></a>
+            <a href="index.html" class="text-decoration-none"><p class="text-secondary"><i class="bi bi-skip-backward"></i> Back</p></a>
 
         </div>
     </nav>
