--- a/Front_End/view/customer_page.html
+++ b/Front_End/view/customer_page.html
@@ -10,7 +10,59 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../assets/css/styles.css">
 
+    <style>
+        /* Reset some default styles for consistency */
+        body, h1, p {
+            margin: 0;
+            padding: 0;
+        }
+
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+            background-color: #2d3436;
+            color: #333;
+            line-height: 1.6;
+        }
+
+        header {
+            background-color: #333;
+            color: #575fcf;
+            text-align: center;
+            padding: 20px 0;
+        }
+
+        h1 {
+            font-size: 36px;
+            margin-bottom: 20px;
+        }
+
+        p {
+            font-size: 18px;
+            margin: 20px 0;
+        }
+
+        main {
+            width: 100%;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 10px 0;
+        }
+
+
+
+        /* Add more styles as needed */
+    </style>
+
     <meta name="viewport" content="width=device-width initial-scale=1">
+
 
 </head>
 <body class="bg-color">
@@ -18,7 +70,7 @@
 <header class="fixed-top">
     <nav class="navbar navbar-expand-lg navbar-dark bg-white">
         <div class="container-fluid">
-            <a class="navbar-brand text-secondary" href="#"><i class="bi bi-front"> Dreed Car Rental</i></a>
+            <a class="navbar-brand text-secondary" href="#"><i class="fs-4 bi-car-front" style="color: #1a1d20;"></i>   Dreed Car Rentals</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -32,9 +84,9 @@
             </div>
 
             <section class="d-flex justify-content-center align-items-center gap-2">
-                <i class="fs-4 bi-bell-fill text-secondary"></i></i>
+                <i class="fs-4 bi-bell-slash"></i>
                 <i class="fs-4 bi-gear-fill text-secondary"></i>
-                <a href="index.html" class="text-decoration-none mx-2 p-0"><p class="text-secondary m-0"><i class="fs-4 bi-box-arrow-left text-secondary"></i> Logout</p></a>
+                <a href="index.html" class="text-decoration-none mx-2 p-0"><p class="text-secondary m-0"><i class="fs-4 bi-door-open-fill"></i> Logout</p></a>
             </section>
 
         </div>
@@ -55,35 +107,35 @@
                         id="menu">
                         <li class="nav-item nav-link align-middle px-0" id="btnHome">
                             <a href="#" class="nav-link align-middle px-0">
-                                <i class="fs-4 bi-house text-secondary"></i> <span
+                                <i class="fs-4 bi-house-gear-fill text-secondary"></i> <span
                                     class="ms-1 d-none d-sm-inline text-secondary">Home</span>
                             </a>
                         </li>
 
                         <li class="nav-item nav-link align-middle px-0" id="btnCar">
                             <a href="#" class="nav-link align-middle px-0">
-                                <i class="fs-4 bi-car-front text-secondary"></i></i> <span
+                                <i class="fs-4 bi-ev-front text-secondary"></i> <span
                                     class="ms-1 d-none d-sm-inline text-secondary">Browse Cars</span>
                             </a>
                         </li>
 
                         <li class="nav-item nav-link align-middle px-0" id="btnCart">
                             <a href="#" class="nav-link align-middle px-0">
-                                <i class="fs-4 bi-cart2 text-secondary"></i> <span
+                                <i class="fs-4 bi-cart4 text-secondary"></i> <span
                                     class="ms-1 d-none d-sm-inline text-secondary">Shopping Cart</span>
                             </a>
                         </li>
 
                         <li class="nav-item">
                             <a href="#" class="nav-link align-middle px-0" id="btnRent">
-                                <i class="fs-4 bi-cart2 text-secondary"></i> <span
+                                <i class="fs-4 bi-journal-text text-secondary"></i><span
                                     class="ms-1 d-none d-sm-inline text-secondary">Your Rents</span>
                             </a>
                         </li>
 
                         <li class="nav-item">
                             <a href="#" class="nav-link align-middle px-0" id="btnManagePayment">
-                                <i class="fs-4 bi-cash-coin text-secondary"></i> <span
+                                <i class="fs-4 bi-wallet2 text-secondary"></i> <span
                                     class="ms-1 d-none d-sm-inline text-secondary">Payments</span>
                             </a>
                         </li>
@@ -91,7 +143,7 @@
                     </ul>
                     <hr>
                     <div class="pb-4 pointer-event" id="customer" data-bs-toggle="modal" data-bs-target="#updateCustomerModal">
-                        <img src="../assets/image/man.png" alt="user" width="30" height="30"
+                        <img src="../assets/image/man.png" alt="user" width="60" height="60"
                              class="rounded-circle">
                         <p class="d-none d-sm-inline mx-1" id="user">User</p>
                     </div>
