--- a/Front_End/view/driver_dashboard.html
+++ b/Front_End/view/driver_dashboard.html
@@ -15,6 +15,93 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../assets/css/styles.css">
 
+    <style>
+        /* Reset some default styles for consistency */
+        body, h1, p {
+            margin: 0;
+            padding: 0;
+        }
+
+        body {
+            font-family: 'Poppins', Arial, Helvetica, sans-serif;
+            background-color: #f7f7f7;
+            color: #333;
+            line-height: 1.6;
+        }
+
+        .bg-color {
+            background-color: #f7f7f7; /* Set a background color for the whole page */
+        }
+
+        header {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 15px 0;
+        }
+
+        .navbar-brand {
+            color: #ccc;
+            font-weight: bold;
+            text-decoration: none;
+        }
+
+        .navbar-toggler-icon {
+            background-color: #ccc;
+        }
+
+        a.text-decoration-none {
+            color: #ccc;
+            text-decoration: none;
+        }
+
+        a.text-decoration-none:hover {
+            text-decoration: underline;
+        }
+
+        main {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        h1 {
+            font-size: 24px;
+            color: #555;
+            text-align: center;
+        }
+
+        .table {
+            background-color: #fff;
+            border: 1px solid #ccc;
+            box-shadow: 0 0 5px #ccc;
+        }
+
+        .table-dark th {
+            background-color: #333;
+            color: #fff;
+        }
+
+        .table-striped tbody tr:nth-of-type(odd) {
+            background-color: #f2f2f2;
+        }
+
+        .fs-4 {
+            font-size: 1.5rem;
+        }
+
+        img.rounded-circle {
+            border: 2px solid #fff;
+        }
+
+        p.text-secondary {
+            color: #555;
+        }
+
+
+    </style>
+
     <meta name="viewport" content="width=device-width initial-scale=1">
 
 </head>
@@ -23,7 +110,7 @@
 <header class="fixed-top">
     <nav class="navbar navbar-expand-lg navbar-dark bg-white">
         <div class="container-fluid">
-            <a class="navbar-brand text-secondary" href="#"><i class="bi bi-front"> Dreed Car Rental</i></a>
+            <a class="navbar-brand text-secondary" href="#"><i class="bi bi-car-front"></i> Dreed Car Rental</i></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -34,7 +121,7 @@
                 </ul>
             </div>
 
-            <a href="index.html" class="text-decoration-none"><p class="text-secondary"><i class="bi bi-box-arrow-left text-secondary"></i> Logout</p></a>
+            <a href="index.html" class="text-decoration-none"><p class="text-secondary"><i class="bi bi-door-open"></i> Logout</p></a>
 
         </div>
     </nav>
